# pos-tech-fiap-alura

./: README.md
ai-model-api/: .gitignore  Predictions.py  api_modelo.py  config.py  deploy.txt  iris_model.ipynb  predictions.db  requirements.txt  routes.py  tools.py
api-receitas/: .gitignore  app.py  config.py  passos.txt  recipes.db  requirements.txt  routes.py
books-api-tech-challenge/: .dockerignore  .gitignore  Dockerfile  Dockerfile_flask  Dockerfile_streamlit  README.md  requirements.txt  supervisord.conf  supervisord_flask.conf  supervisord_streamlit.conf
datathon-7mlet-grupo-73/: .env.example  .gitignore  README.md  pyproject.toml  src_config.py
datathon-7mlet-grupo-73/Datathon.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
datathon-7mlet-grupo-73/app/: __init__.py  api.py  azure.py  evaluation.py  main.py  mlops.py  mlruns.db  model.py  pipeline.py
datathon-7mlet-grupo-73/data/golden_set/: evaluation_cases.jsonl
datathon-7mlet-grupo-73/data/kaggle/: README.md  __init__.py  kaggle.py
datathon-7mlet-grupo-73/data/synthetic_enrichment/: delayed_rewards.jsonl  offer_catalog.json  offer_events.jsonl  synthetic.py
datathon-7mlet-grupo-73/docs/: architecture-azure.md  mlops-plan.md
datathon-7mlet-grupo-73/logs/: decisions.jsonl
datathon-7mlet-grupo-73/reports/: api_curl_examples.sh  contract_tests.json  drift_report.json  evaluation_report.json  mlops_cycle.json  simulation_metrics.json
dl-eth-api-tech-challenge/: .dockerignore  .gitignore  DOCKER_README.md  DockerApproachesVsCode.md  Dockerfile  Dockerfile.backend  README.md  (+7 more)
(+77 files in other folders)
