[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["src_config", "kaggle", "synthetic", "model", "evaluation", "pipeline"]

[project]
name = "Datathon"
version = "0.1.0"
requires-python=">=3.11"
license = "MIT"
description = "A datathon project for data analysis and machine learning."
authors = [
    { name="Matheus Lopes Vivas", email="mathvivas@hotmail.com" }
]

dependencies = [
    "matplotlib",
    "jupyterlab",
    "torch>=2.2",
    "scikit-learn>=1.4",
    "pandas>=2.2",
    "numpy>=1.26",
    "mlflow>=2.12",
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "pydantic>=2.7",
    "evidently>=0.4",
]

[project.scripts]
pipeline = "pipeline:main"

[tool.pytest.ini_options]
testpaths = ["tests"]